Cambio en el NOMBRE DEL BLOG
Se puede...si

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/Estilos.css">
     </head>
     <body>
-        <h1>Aca vamos a hacer un POST</h1>
+        <h1>Aca vamos a hacer un GRAN BLOG</h1>
         <p>Y este es el PARRAFO</p>
     </body>
 </html>
